// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewCredentialInstructions /> should match snapshot 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "alignItems": "center",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={
      Object {
        "default": "RelativeImageStub",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View>
      <Image
        resizeMode="contain"
        source={
          Object {
            "default": "RelativeImageStub",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "height": 70.7142857142857,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#EB9B2D",
              "fontFamily": "Lato",
              "fontSize": 19.82857142857143,
              "fontWeight": "bold",
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        No Credentials yet!
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505050",
              "fontSize": 16.854285714285716,
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        Want to see how this app works?
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505050",
              "fontSize": 14.871428571428572,
              "marginHorizontal": "5%",
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        Go through the tutorial at www.try.connect.me. Connect.Me is for collecting digital Credentials. They will appear here.
      </Text>
    </View>
  </View>
</View>
`;

exports[`<NewCredentialInstructions /> should match snapshot for test network 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "alignItems": "center",
      "height": "100%",
      "justifyContent": "center",
      "width": "100%",
    }
  }
>
  <Image
    source={
      Object {
        "default": "RelativeImageStub",
      }
    }
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": "100%",
          "width": "100%",
        },
        undefined,
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "center",
          "width": "100%",
        },
      ]
    }
  >
    <View>
      <Image
        resizeMode="contain"
        source={
          Object {
            "default": "RelativeImageStub",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "height": 70.7142857142857,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "color": "#EB9B2D",
              "fontFamily": "Lato",
              "fontSize": 19.82857142857143,
              "fontWeight": "bold",
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        No Credentials yet!
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505050",
              "fontSize": 16.854285714285716,
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        Want to see how this app works?
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505050",
              "fontSize": 14.871428571428572,
              "marginHorizontal": "5%",
              "marginVertical": 4.785714285714286,
              "textAlign": "center",
            },
          ]
        }
      >
        Connect.Me is for collecting digital Credentials. They will appear here.
      </Text>
    </View>
  </View>
</View>
`;
